<resources>
    <string name="app_name">RSSchool2021 Task Storage</string>
    <string name="custom_order">Custom order</string>
    <string name="search">Search</string>
    <string name="cat_name">Cat name</string>
    <string name="cate_age">Cat age</string>
    <string name="cat_breed">Cat Breed</string>
    <string name="add_button">Add button</string>
    <string name="add_new_cat">Add new cat</string>

    <string name="titleListFragment">Task Storage</string>
    <string name="titleAddItemFragment">Add cat to list</string>
    <string name="titleSettingsFragment">Settings</string>
    <string name="titleEditItemFragment">Edit Cat</string>
    <string name="add_item_list_button">Add cat list button</string>
    <string name="settings">Settings</string>
    <string name="header">Header</string>
    <string name="check">Done</string>
    <string name="save_cat">Save edit cat</string>
    <string name="cat_id">Cat ID =</string>
    <string name="delete_cat">Delete cat!</string>

</resources>