<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/header_edit"
        android:text="@string/cat_id"
        android:gravity="center"
        style="@style/my_style_storage"
        android:textSize="20dp"
        android:background="@color/teal_200"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editName"
        />

    <EditText
        android:id="@+id/editName"
        style="@style/my_style_storage"
        android:autofillHints="name"
        android:hint="@string/cat_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/editAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_edit"
        />

    <EditText
        android:id="@+id/editAge"
        style="@style/my_style_storage"
        android:autofillHints="age"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/cate_age"
        app:layout_constraintBottom_toTopOf="@id/editBreed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName"
        />

    <EditText
        android:id="@+id/editBreed"
        style="@style/my_style_storage"
        android:hint="@string/cat_breed"
        android:autofillHints = "breed"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAge"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/save_cat"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editBreed"
        app:layout_constraintBottom_toTopOf="@id/deleteButton"
        />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete_cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>