<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/addName"
        style="@style/my_style_storage"
        android:autofillHints="name"
        android:hint="@string/cat_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/addAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <EditText
        android:id="@+id/addAge"
        style="@style/my_style_storage"
        android:autofillHints="age"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/cate_age"
        app:layout_constraintBottom_toTopOf="@id/addBreed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addName" />

    <EditText
        android:id="@+id/addBreed"
        style="@style/my_style_storage"
        android:hint="@string/cat_breed"
        android:autofillHints = "breed"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAge"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/add_new_cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBreed" />

</androidx.constraintlayout.widget.ConstraintLayout>